# DRCore2

./: .gitignore  CMakeLists.txt  README.md
include/: Core2Main.h  DRBaseExceptions.h  DRColor.h  DRCubicSpline.h  DRFile.h  DRGameStateManager.h  DRHash.hpp  DRHashList.hpp  DRLogger.h  DRMatrix.h  DRResourcePtr.h  DRUtils.h  DRVector2.h  DRVector2i.h  DRVirtualFile.h
include/DRCore2/: DRBaseExceptions.h  DRBezierCurve.h  DRBoundingBox.h  DRBoundingBoxi.h  DRColor.h  DRCore2Main.h  DRCubicSpline.h  DRDampingSpring.h  DRFile.h  DRFileManager.h  DRFrustumCulling.h  DRGameStateManager.h  DRHashList.h  DRIndexReferenzHolder.h  DRMatrix.h  DRMemoryList.h  DRPack2D.h  DRPlane.h  DRRandom.h  DRResourcePtr.h  DRResourcePtrHolder.h  DRTypes.h  DRUtils.h  DRVector2.h  DRVector2i.h  DRVector3.h  DRVirtualFile.h
include/DRCore2/Algorithm/: DRBezierCurve.h  DRBoundingBox.h  DRBoundingBoxi.h  DRCubicSpline.h  DRDampingSpring.h  DRFrustumCulling.h  DRPack2D.h
include/DRCore2/Foundation/: DRBaseExceptions.h  DRColor.h  DRFile.h  DRHash.h  DRHashList.h  DRIResource.h  DRIni.h  DRLogger.h  DRMemoryList.h  DRObject.h  DRPlane.h  DRRandom.h  DRUtils.h  DRVector2.h  DRVector3i.h  DRVirtualFile.h
include/DRCore2/Manager/: DRFileManager.h  DRGameStateManager.h
include/DRCore2/Threading/: DRCPUScheduler.h  DRCPUSchedulerTasksLog.h  DRCPUSchedulerThread.h  DRCPUTask.h  DRFuzzyTimer.h  DRMultithreadContainer.h  DRMultithreadLogger.h  DRMultithreadQueue.h  DRTask.h  DRThread.h
include/DRCore2/Utils/: DRIni.h  DRProfiler.h
packaging/: CMakeLists.txt  DRCore2Config.cmake
src/: CMakeLists.txt  Core2Main.cpp  DRBaseExceptions.cpp  DRBezierCurve.cpp  DRBoundingBox.cpp  DRBoundingBoxi.cpp  DRCore2Main.cpp  DRCubicSpline.cpp  DRDampingSpring.cpp  DRFile.cpp  DRFileManager.cpp  DRFrustumCulling.cpp  DRGameStateManager.cpp  DRHashList.cpp  DRIndexReferenzHolder.cpp  DRIni.cpp  DRLogger.cpp  DRMatrix.cpp  DRObject.cpp  DRPack2D.cpp  DRPlane.cpp  DRRandom.cpp  DRResourcePtrHolder.cpp  DRUtils.cpp  DRVector2.cpp  DRVector2i.cpp  DRVector3.cpp  DRVirtualFile.cpp
src/Algorithm/: DRBezierCurve.cpp  DRBoundingBox.cpp  DRBoundingBoxi.cpp  DRCubicSpline.cpp  DRDampingSpring.cpp  DRFrustumCulling.cpp  DRPack2D.cpp
src/Foundation/: DRBaseExceptions.cpp  DRFile.cpp  DRHashList.cpp  DRIndexReferenzHolder.cpp  DRIni.cpp  DRLogger.cpp  DRMatrix.cpp  DRObject.cpp  DRPlane.cpp  DRRandom.cpp  DRResourcePtrHolder.cpp  DRUtils.cpp  DRVector2.cpp  DRVector2i.cpp  DRVector3.cpp  DRVirtualFile.cpp
src/Manager/: DRFileManager.cpp  DRGameStateManager.cpp
src/Threading/: DRCPUScheduler.cpp  DRCPUSchedulerTasksLog.cpp  DRCPUSchedulerThread.cpp  DRCPUTask.cpp  DRFuzzyTimer.cpp  DRMultithreadContainer.cpp  DRMultithreadLogger.cpp  DRTask.cpp  DRThread.cpp
src/Utils/: DRIni.cpp  DRProfiler.cpp
