
FILE(GLOB CORE2_FILES "*.cpp" "../include/*.h")
ADD_LIBRARY(DRCore2 SHARED ${CORE2_FILES})

IF(UNIX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -mavx")
ENDIF(UNIX)

INSTALL(TARGETS DRCore2
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

set_target_properties(DRCore2 PROPERTIES DEFINE_SYMBOL BUILD_CORE2_DLL)
SET_TARGET_PROPERTIES(DRCore2 PROPERTIES CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../bin)
SET_TARGET_PROPERTIES(DRCore2 PROPERTIES CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
SET_TARGET_PROPERTIES(DRCore2 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ../../lib)
